[package]
name = "ecommerce-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
serde = {version="^1.0", features=["derive", "rc"]}
serde_json = "^1.0"
regex = "^1.9.6"

tracing = {version="0.1", default-features=true}
tracing-subscriber = {version="0.3.17", features=["std", "fmt", "registry"]}
tracing-appender   = "0.2.2"

