[tool.poetry]
name = "product"
version = "2.1.0"
description = "product management service"
authors = ["T.H."]
license = "MIT"
readme = "README.md"
packages = [{include="product", from="./src"}, {include="settings", from="."}, {include="tests", from="."}]

[tool.poetry.dependencies]
python = "^3.13.7"
granian = "1.5.2"
blacksheep = "2.0.8"
pydantic = "2.10.1"
elasticsearch-curator = "8.0.21"
aiohttp = "~3.10.0"
PyJWT = "^2.10.0"
cryptography = "^44.0.0"
celery = "^5.4.0"
ecommerce-common = {path = "../../common/python"}
my-c-extension-lib = {path = "../../common/python/c_exts"}

[tool.poetry.group.test.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.24.0"
ijson = ">= 3.2.*" # for mocking jwks source

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
# tracking relevant issue:
# https://github.com/pytest-dev/pytest-asyncio/issues/924
