[package]
name = "order-integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version="1.0", features=["rc"]}
serde_json = "1.0"
tokio = {version="^1.29", features=["rt", "macros"]}
tower = "^0.4.13"
http = "0.2"
http-body = "^0.4.6"
axum-core = "^0.3.4"
hyper = {version="^0.14", features=["client", "runtime", "tcp", "http1"]}
chrono  = {version="0.4.31", features=["std", "alloc", "serde"]}
order = {path="../..", default-features=false}

[features]
mariadb = ["order/mariadb"]

[[test]]
name = "web"
path = "./web.rs" # the same folder as this cargo file
test = true

[[test]]
name = "rpcsub"
path = "./rpc_consumer.rs" # the same folder as this cargo file
test = true

