[package]
name = "order-integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version="1.0", features=["rc"]}
serde_json = "1.0"
tokio = {version="^1.47", features=["rt", "macros"]}
tower = "^0.5.2"
http = "^1.3.1"
http-body-util = "^0.1.3"
axum-core = "^0.5.5"
hyper = {version="^1.7.0", features=["client", "http1"]}
chrono  = {version="0.4.31", features=["std", "alloc", "serde"]}

order = {path="../..", default-features=false}
ecommerce-common = {version="^0.1.0", path="../../../common/rust"}

[features]
mariadb = ["order/mariadb"]

[[test]]
name = "web"
path = "./web.rs" # the same folder as this cargo file
test = true

# TODO, stress test

